--- a/templates/home.html
+++ b/templates/home.html
@@ -176,9 +176,9 @@ and technical growth{% endblock %} {% block content %}
             <h3
               class="text-5xl font-bold text-blue-400 group-hover:text-blue-300 transition-colors"
             >
-              10+
+              20+
             </h3>
-            <p class="text-gray-400 mt-2">Tech Teams</p>
+            <p class="text-gray-400 mt-2">Tech Bodies</p>
           </div>
           <div
             class="bg-slate-800/50 p-8 rounded-2xl transform hover:scale-105 transition-all duration-300 border border-purple-500/20 hover:border-purple-500/40 group"
@@ -186,7 +186,7 @@ and technical growth{% endblock %} {% block content %}
             <h3
               class="text-5xl font-bold text-purple-400 group-hover:text-purple-300 transition-colors"
             >
-              100+
+              80+
             </h3>
             <p class="text-gray-400 mt-2">Yearly Events</p>
           </div>
@@ -206,7 +206,7 @@ and technical growth{% endblock %} {% block content %}
             <h3
               class="text-5xl font-bold text-cyan-400 group-hover:text-cyan-300 transition-colors"
             >
-              10,000+
+              10k+
             </h3>
             <p class="text-gray-400 mt-2">Students Catered</p>
           </div>
